# SWE4_UE_SS24

./: .gitignore
KT1/: CMakeLists.txt
KT1/src/kt2010/: kt2010.cpp  students.txt
KT1/src/kt2015/: entries.txt  kt2015.cpp
KT1/src/kt2022/: kt2022.cpp
KT1/src/persons/: persons.cpp  persons.txt
ue01/: CMakeLists.txt
ue01/src/container_demo/: container_demo.cpp  random_number_generator.h
ue01/src/io_demo/: io_demo.cpp
ue02/: CMakeLists.txt
ue02/src/: test.txt
ue02/src/index_v1/: index_v1.cpp
ue02/src/index_v2/: index_v2.cpp
ue02/src/index_v3/: index_v3.cpp
ue03/: CMakeLists.txt
ue03/src/smart_pointers/: counted_ptr.h  person.h  scoped_ptr.h  smart_pointer_test.cpp  student.h
ue04/heap/: build.xml
ue04/heap/src/main/swe4/client/: HeapQueueClient.java
ue04/heap/src/main/swe4/queues/: HeapQueue.java
ue04/hello/: build.xml
ue04/hello/src/main/swe4/: Hello.java
ue05/list/: build.xml
ue05/list/src/main/swe4/client/: SLListClient.java
ue05/list/src/main/swe4/collections/: EmptyListException.java  SLList.java
ue05/list/src/test/swe4/test/: SLListTest.java
ue06/tree-set/: build.xml
ue06/tree-set/src/main/client/: MultiSetClient.java  Person.java
ue06/tree-set/src/main/swe4/collections/: BSTMultiSet.java  SortedMultiSet.java
ue06/tree-set/src/test/swe4/test/: BSTMultiSetTest.java
ue07/: build.xml
ue07/src/main/swe4/gui/: Direction.java  Preferences.java  PreferencesDialog.java  ScribbleCanvas.java  ScribbleFX.java
ue07/src/main/swe4/gui/css/: preferences-dialog.css  scribble-fx.css
ue08/: build.xml
ue08/src/main/swe4/data/: Address.java  Person.java
ue08/src/main/swe4/serialization/: CloneTest.java  Serialization.java
ue09/gui-thread/src/main/swe4/threading/: GUIThreadJavaFX.java
ue09/gui-thread/src/main/swe4/util/: Util.java
ue09/producer-consumer/src/main/swe4/threading/: Buffer.java  Consumer.java  Main.java  Producer.java
ue09/producer-consumer/src/main/swe4/util/: Util.java
ue09/thread-sync/src/main/: Printer.java
ue11/phonebook/scripts/: create-phonebook-schema.ps1  mysql-cli.ps1  start-mysql-server.ps1  start-phonebook.ps1  stop-mysql-server.ps1
ue11/phonebook/src/main/swe4/dal/: DataAccessException.java  Person.java  PersonDao.java  PersonDaoJdbc.java  PhoneBookBL.java
ue12/phonebook-web/: build.xml
ue12/phonebook-web/scripts/: Dockerfile  create-phonebook-schema.ps1  docker-compose.yml  rm-tomcat-and-mysql.ps1  start-tomcat-and-mysql.ps1  stop-tomcat-and-mysql.ps1
ue12/phonebook-web/scripts/tomcat-config/: context.xml  tomcat-users.xml
ue12/phonebook-web/war/: swe4.war
ue12/phonebook-web/web/: context.xml  hello.html  index.html  web.xml
ue13/or-mapper/: build.xml
ue13/or-mapper/scripts/: create-phonebook-schema.ps1  rm-mysql-server.ps1  start-mysql-server.ps1
(+28 files in other folders)
